--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-media",
-  "version": "6.0.1-dev",
+  "version": "6.0.1-rc.0",
   "description": "Cordova Media Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
